# tool-deck

./: .editorconfig  .eslintrc.json  .gitignore  .gitignore-init  .mise.toml  .prettierignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: tauri-build.yml
app/: .eslintrc.json  .prettierignore  .prettierrc  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/: splashscreen.html
app/src/: App.tsx  main.tsx  splash.css  splash.tsx
app/src-tauri/: Cargo.toml  Cross.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json  mobile.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/CommandPanel/: Command.tsx  index.tsx
app/src/components/NotificationPanel/: Notification.tsx
app/src/components/StatusBar/: Agent.tsx  CPU.tsx  DarkMode.tsx  Memory.tsx  Refresh.tsx  Settings.tsx  index.tsx
client/: Cargo.toml
client/src/: main.rs
public/: splashscreen.html
server/: Cargo.toml
server/src/: main.rs
src/: App.tsx  splash.css  splash.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: api.rs  app.rs  commands.rs  lib.rs  main.rs  migrations.rs  settings.rs  setup.rs
src/components/NotificationPanel/: index.tsx
src/components/StatusBar/: QuitApp.tsx  Settings.tsx
