[workspace]
resolver = "2"
members = ["server", "client", "app/src-tauri"]

[workspace.package]
rust-version = "1.71.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.dev]
opt-level = 0
incremental = true
lto = true
debug = 0
strip = "debuginfo"
#split-debuginfo = "unpacked"

[profile.release]
opt-level = "s"
incremental = false
lto = true
codegen-units = 1
panic = "abort"