[workspace]
resolver = "2"
members = ["server", "client", "app/src-tauri"]

[workspace.package]
rust-version = "1.71.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
log = { version = "0.4" }
tokio = { version = "1.39.3" }
futures-util = { version = "0.3.30" }
futures-channel = { version = "0.3.30" }
tokio-tungstenite = { version = "0.23.1" }

[profile.dev]
opt-level = 0
#incremental = false
#lto = true
#debug = 0
#strip = "debuginfo"
#split-debuginfo = "unpacked"

[profile.release]
opt-level = "s"
incremental = false
lto = true
codegen-units = 1
panic = "abort"
