[package]
name = "tool-deck"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon", "wry", "compression"] }
tauri-plugin-shell = "2.0.0-rc"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-log = "2.0.0-rc"
#tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
tauri-plugin-network = "2.0.2"
tauri-plugin-system-info = "2.0.2"
tauri-plugin-notification = "2.0.0-rc.2"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-store = "2.0.0-rc.2"
#tauri-plugin-websocket = "2.0.0-rc.0"
tauri-plugin-devtools = "2.0.0-rc"
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-positioner = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-brceta"

futures = "0.3"
futures-channel = "0.3.30"
futures-util = { version = "0.3", features = ["sink", "std"] }
rand = "0.8"
local-ip-address = "0.6.1"
tokio = { version = "1.39.3", features = ["full"] }
log = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tokio-tungstenite = "0.23"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
