[package]
name = "tool-deck"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tool_deck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-log = "2.0.0-rc"
log = "^0.4"
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
tauri-plugin-network = "2.0.2"
tauri-plugin-system-info = "2.0.2"
tokio = "1.39.3"
tauri-plugin-notification = "2.0.0-rc.2"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-store = "2.0.0-rc.2"
tauri-plugin-websocket = "2.0.0-rc.0"
tauri-plugin-devtools = "2.0.0-rc"
local-ip-address = "0.6.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-positioner = { version = "2.0.0-rc", features = ["tray-icon"] }
