[package]
name = "tool-deck"
version = "0.1.0"
description = "Tool Deck App"
authors = ["you"]
edition = "2021"
rust-version = { workspace = true }
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tool_deck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = ["codegen"] }

[dependencies]
tauri = { version = "2.0.0-rc", default-features = false, features = ["wry", "compression", "image-ico", "image-png", "tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"

[features]
prod = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0.0-rc"
tauri-plugin-cli = "2.0.0-rc"
tauri-plugin-positioner = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
